2023/eu/ns-invalid-environment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "example-invalid-environment"
  labels:
    environment: xyz
    owner: jpbetz
