2023/eu/ns-jpbetz-sandbox-invalid2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "my-sandbox"
  labels:
    environment: developer-sandbox
    owner: jpbetz
