2023/eu/ns-jpbetz-sandbox-valid.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "jpbetz-sandbox"
  labels:
    environment: developer-sandbox
    owner: jpbetz
