2023/eu/ns-missing-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "example-invalid-environment"
  labels:
    owner: jpbetz
