2023/eu/ns-production-invalid.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "not-allowed-for-user"
  labels:
    environment: production
    owner: jpbetz
