2023/eu/ns-production-valid.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "web-ui"
  labels:
    environment: production
    owner: web-ui-team
