2023/eu/ns-valid-environment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "example-1"
  labels:
    environment: test
    owner: jpbetz
