2023/eu/invalid-deployment2.yaml
apiVersion: 'apps/v1'
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 'nginx:1.14.2'
          livenessProbe:
            httpGet:
              path: '/healthz'
              port: 80
          ports:
            - containerPort: 80
