2023/eu/require-container-registry-warn-audit.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "require-container-registry.example.com"
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
  - expression: 'object.spec.template.spec.containers.all(c, c.image.matches("^my-registry\\.io/"))'
    message: 'not all images are from the the required container registry: my-registry.io'
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "require-container-registry-binding.example.com"
spec:
  matchResources:
    objectSelector:
      matchLabels:
        environment: production
  policyName: "require-container-registry.example.com"
  validationActions: [Deny]
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "require-container-registry-binding-rollout.example.com"
spec:
  matchResources:
    objectSelector:
      matchExpressions:
      - key: environment
        operator: NotIn
        values: [production]
  policyName: "require-container-registry.example.com"
  validationActions: [Warn, Audit]
