2023/eu/require-liveness-probe.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "require-liveness-probe.example.com"
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
  - expression: "object.spec.template.spec.containers.all(c, has(c.livenessProbe))"
    message: "All containers must have a livenessProbe"
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "require-liveness-probe-binding.example.com"
spec:
  policyName: "require-liveness-probe.example.com"
  validationActions: [Deny]
