2023/eu/required-labels.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "required-labels.example.com"
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  validations:
  - expression: "['environment', 'owner'].all(l, l in object.metadata.labels)"
    messageExpression: "'Namespace missing required labels: ' + ['environment', 'owner'].filter(l, !(l in object.metadata.labels)).join(', ')"
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "required-labels-binding.example.com"
spec:
  policyName: "required-labels.example.com"
  validationActions: [Deny]


  # Exercise for the reader: Add a "provisining" environment state that can be transitioned to any other environment state.
