2023/eu/validate-developer-sandbox.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "developer-sandbox.example.com"
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  matchConditions:
  - name: environment-is-sandbox
    expression: "object.metadata.labels['environment'] == 'developer-sandbox'"
  validations:
  - expression: "object.metadata.labels['owner'] == request.userInfo.username"
    messageExpression: "'Owner must be your username for a sandbox namespace. Expected: ' + request.userInfo.username + ', got: ' + object.metadata.labels['owner']"
  - expression: "object.metadata.name == request.userInfo.username + '-sandbox'"
    messageExpression: "'Namespace name must be <username>-sandbox for a sandbox namespace. Expected: ' + request.userInfo.username + '-sandbox, got: ' + object.metadata.name"
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "developer-sandbox-binding.example.com"
spec:
  policyName: "developer-sandbox.example.com"
  validationActions: [Deny]
